Fixed z-index for mobile nav

--- a/_sass/components/nav.scss
+++ b/_sass/components/nav.scss
@@ -135,7 +135,7 @@ nav.mobile {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 999;
+    z-index: -10;
     margin: 0;
     padding: 0;
 
@@ -194,5 +194,6 @@ nav.mobile {
         opacity: 0.9;
         background-color: $body-bg;
         transition: all 0.5s ease-in;
+        z-index: 999;
     }
 }
